@@ -4,7 +4,8 @@ Changelog
 1.5.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed upload when filename has special characters under IE.
+  [thomasdesvenain]
 
 
 1.5.1 (2012-05-24)
